--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <button class="btn btn-primary google-btn" type="button">
                 <img src="assets/img/kisspng-google-logo-google-search-google-doodle-circular-economy-5b2082fe6d9843.2262246515288573424489.png">Sign in with Google</button>
             <div class="d-lg-flex justify-content-lg-end links">
-                <a class="no-account" href="#">Don't have an account ?</a>
-                <a class="sign-up" href="#" >Sign Up here</a>
+                <a class="no-account" href="#"><b>Don't have an account ?</b></a>
+                <a class="sign-up" href="#" ><b>Sign Up here</b></a>
             </div>
         </div>
         <div class="carousel-container">
